add frame html, prioritize base functionality

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html>
-	
+	<head>
+		<title>Currency Exchange</title>
+	</head>
+	<body>
+		<div class="head">
+			<h1>Currency Exchange</h1>
+			<h2>Receive currency valuation accurate within 24 hours of query</h2>
+		</div>
+		<div class="input-field">
+			<form id="curr-input">
+				<select id="convert-from">
+					
+				</select>
+			</form>
+		</div>
+	</body>
 </html>
