--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,39 @@
 		</div>
 		<div class="input-field">
 			<form id="curr-input">
+				<label for="convert-from">Convert From:</label>
 				<select id="convert-from">
-					
+					<option value="USD">USD (United States Dollar)</option>
+					<option value="USD">TND (Tunisian Dinar)</option>
+					<option value="USD">OMR (Omani Rial)</option>
+					<option value="USD">NPR (Nepalese Rupee)</option>
+					<option value="USD">STN (São Tomé and Príncipe Dobra)</option>
+					<option value="USD">RUB (Russian Ruble)</option>
+					<option value="USD">SEK (Swedish Krona)</option>
+					<option value="USD">HTG (Hatian Gourde)</option>
+					<option value="USD">CLP (Chilean Peso)</option>
+					<option value="USD">KPW (North Korean Won)</option>
 				</select>
+				<label for="convert-to">Convert To:</label>
+				<select id="convert-to">
+					<option value="USD">USD (United States Dollar)</option>
+					<option value="USD">TND (Tunisian Dinar)</option>
+					<option value="USD">OMR (Omani Rial)</option>
+					<option value="USD">NPR (Nepalese Rupee)</option>
+					<option value="USD">STN (São Tomé and Príncipe Dobra)</option>
+					<option value="USD">RUB (Russian Ruble)</option>
+					<option value="USD">SEK (Swedish Krona)</option>
+					<option value="USD">HTG (Hatian Gourde)</option>
+					<option value="USD">CLP (Chilean Peso)</option>
+					<option value="USD">KPW (North Korean Won)</option>
+				</select>
+				<label for="convert-amt">Amount to convert:</label>
+				<input type="number" id="convert-amt" name="convert-amt"> 
+				<button type="submit" class="btn">Convert</button>
 			</form>
+			<div class="result-display hidden" id="convert-result">
+
+			</div>
 		</div>
 	</body>
 </html>
