integrate currCalc into apiGet

--- a/src/index.html
+++ b/src/index.html
@@ -13,31 +13,31 @@
 				<label for="convert-from">Convert From:</label>
 				<select id="convert-from">
 					<option value="USD">USD (United States Dollar)</option>
-					<option value="USD">TND (Tunisian Dinar)</option>
-					<option value="USD">OMR (Omani Rial)</option>
-					<option value="USD">NPR (Nepalese Rupee)</option>
-					<option value="USD">STN (São Tomé and Príncipe Dobra)</option>
-					<option value="USD">RUB (Russian Ruble)</option>
-					<option value="USD">SEK (Swedish Krona)</option>
-					<option value="USD">HTG (Hatian Gourde)</option>
-					<option value="USD">CLP (Chilean Peso)</option>
-					<option value="USD">KPW (North Korean Won)</option>
+					<option value="TND">TND (Tunisian Dinar)</option>
+					<option value="OMR">OMR (Omani Rial)</option>
+					<option value="NPR">NPR (Nepalese Rupee)</option>
+					<option value="STN">STN (São Tomé and Príncipe Dobra)</option>
+					<option value="RUB">RUB (Russian Ruble)</option>
+					<option value="SEK">SEK (Swedish Krona)</option>
+					<option value="HTG">HTG (Hatian Gourde)</option>
+					<option value="CLP">CLP (Chilean Peso)</option>
+					<option value="KPW">KPW (North Korean Won) (Not yet supported)</option>
 				</select>
 				<label for="convert-to">Convert To:</label>
 				<select id="convert-to">
 					<option value="USD">USD (United States Dollar)</option>
-					<option value="USD">TND (Tunisian Dinar)</option>
-					<option value="USD">OMR (Omani Rial)</option>
-					<option value="USD">NPR (Nepalese Rupee)</option>
-					<option value="USD">STN (São Tomé and Príncipe Dobra)</option>
-					<option value="USD">RUB (Russian Ruble)</option>
-					<option value="USD">SEK (Swedish Krona)</option>
-					<option value="USD">HTG (Hatian Gourde)</option>
-					<option value="USD">CLP (Chilean Peso)</option>
-					<option value="USD">KPW (North Korean Won)</option>
+					<option value="TND">TND (Tunisian Dinar)</option>
+					<option value="OMR">OMR (Omani Rial)</option>
+					<option value="NPR">NPR (Nepalese Rupee)</option>
+					<option value="STN">STN (São Tomé and Príncipe Dobra)</option>
+					<option value="RUB">RUB (Russian Ruble)</option>
+					<option value="SEK">SEK (Swedish Krona)</option>
+					<option value="HTG">HTG (Hatian Gourde)</option>
+					<option value="CLP">CLP (Chilean Peso)</option>
+					<option value="KPW">KPW (North Korean Won) (Not yet supported)</option>
 				</select>
 				<label for="convert-amt">Amount to convert:</label>
-				<input type="number" id="convert-amt" name="convert-amt"> 
+				<input type="number" step="0.01" id="convert-amt" name="convert-amt"> 
 				<button type="submit" class="btn">Convert</button>
 			</form>
 			<div class="result-display hidden" id="convert-result">
